--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>YouTube intensive</title>
+        <title>YouTube-intensive-js</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -48,6 +48,7 @@
         <div class="videos">
             <div class="container">
                 <div class="videos__wrapper">
+                    <!--
                     <a data-url="AiiSFdsuEjo" href="#" class="videos__item">
                         <img src="img/thumb.webp" alt="thumb">
                         <div class="videos__item-descr">
@@ -73,7 +74,7 @@
                             3,2 тыс. просмотров
                         </div>
                     </a>
-
+                    -->
                     <button class="more">Загрузить еще</button>
                 </div>
             </div>
@@ -83,6 +84,7 @@
             <div id='frame' class="modal__body"></div>
         </div>
         
+        <script src="https://apis.google.com/js/api.js"></script>
         <script src="js/script.js"></script>
-  </body>
+    </body>
 </html>
